plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'sagex.miniclient.pwa'
version = '1.0.0.1'

// Compile against the Java 8 API surface (not just Java 8 bytecode). `--release 8`
// makes javac reject any Java 9+ API (e.g. Set.of, Process.pid, String.isBlank)
// at COMPILE time, so the plugin can't accidentally break on a stock Java 8
// SageTV V9 server. This supersedes sourceCompatibility/targetCompatibility
// (which only pin the bytecode version, not the API surface). Requires JDK 9+.
tasks.withType(JavaCompile).configureEach {
    options.release = 8
}

repositories {
    mavenCentral()
}

dependencies {
    // Embedded Jetty (HTTP server + WebSocket + Security)
    implementation 'org.eclipse.jetty:jetty-server:9.4.56.v20240826'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.56.v20240826'
    implementation 'org.eclipse.jetty:jetty-security:9.4.56.v20240826'
    implementation 'org.eclipse.jetty.websocket:websocket-server:9.4.56.v20240826'
    implementation 'org.eclipse.jetty.websocket:websocket-servlet:9.4.56.v20240826'
    implementation 'org.eclipse.jetty.websocket:websocket-api:9.4.56.v20240826'

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'org.slf4j:slf4j-simple:2.0.16'

    // JSON parsing/persistence for capability feedback profiles (Java 8 + Shadow ASM compatible)
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
}

shadowJar {
    archiveBaseName.set('pwa-miniclient-bridge')
    archiveClassifier.set('')
    mergeServiceFiles()

    // Do NOT publish ServletContainerInitializer from shaded Jetty.
    // If present on SageTV's global classpath, Jetty will try to run it for every
    // webapp context (sagex, apidocs, etc.) and fail with classloader conflicts.
    exclude 'META-INF/services/javax.servlet.ServletContainerInitializer'

    // Relocate Jetty and Jakarta to avoid conflicts with SageTV's bundled Jetty 9
    relocate 'org.eclipse.jetty', 'pwa.shadow.org.eclipse.jetty'
    relocate 'jakarta.servlet', 'pwa.shadow.jakarta.servlet'
    relocate 'jakarta.websocket', 'pwa.shadow.jakarta.websocket'

    // Relocate SLF4J to avoid conflicts with SageTV's SLF4J
    relocate 'org.slf4j', 'pwa.shadow.org.slf4j'

    // Exclude SageTV stub classes — the real ones are provided at runtime
    exclude 'sage/Sage.class'
    exclude 'sage/SageTVPlugin.class'
    exclude 'sage/SageTVPluginRegistry.class'
    exclude 'sage/SageTVEventListener.class'

    manifest {
        attributes(
            'Main-Class': 'sagex.miniclient.pwa.BridgeMain'
        )
    }
}

tasks.named('jar') {
    // Standard jar just for SageTV plugin (no main class needed)
    archiveBaseName.set('pwa-miniclient-bridge')
}

// Copy PWA static files into resources for embedding in JAR
processResources {
    from('../public') {
        into 'pwa-public'
    }
}

// ── SageTV Plugin Release Packaging ─────────────────────────

// ZIP 1: Shadow JAR (SageTV JAR PackageType extracts into JARs/ automatically)
tasks.register('pluginJarZip', Zip) {
    dependsOn shadowJar
    archiveBaseName.set('pwa-miniclient-jar')
    archiveVersion.set(project.version.toString())
    destinationDirectory.set(layout.buildDirectory.dir('plugin-release'))

    from(shadowJar.archiveFile)
}

// ZIP 2: PWA static files → pwa-miniclient/public/
tasks.register('pluginWebZip', Zip) {
    archiveBaseName.set('pwa-miniclient-web')
    archiveVersion.set(project.version.toString())
    destinationDirectory.set(layout.buildDirectory.dir('plugin-release'))

    from('../public') {
        into 'pwa-miniclient/public'
    }
}

// Build both release ZIPs
tasks.register('pluginRelease') {
    dependsOn pluginJarZip, pluginWebZip
    doLast {
        println "Plugin release ZIPs created in build/plugin-release/"
    }
}

build.dependsOn shadowJar
